.ci/service.yml
apiVersion: v1
kind: Service
metadata:
 name: ${APP_NAME}
 namespace: ${APP_NAMESPACE}
 labels:
   app: ${APP_NAME}
spec:
 ports:
   - port: 8000
     targetPort: 8000
     protocol: TCP
     name: http
 selector:
   app: ${APP_NAME}
